--- a/Vector_1.1/Vector_1.1.vcxproj.filters
+++ b/Vector_1.1/Vector_1.1.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="my_vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Tree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
